--- a/src/styles/input.comp.module.scss
+++ b/src/styles/input.comp.module.scss
@@ -11,7 +11,7 @@
     }
 
     input {
-        padding: 18px 15px;
+        padding: 15px 15px;
         border: 1px solid $light-bg;
     }
 }
